Add RouteGuide server and client implementation.

--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
       <artifactId>grpc-all</artifactId>
       <version>${grpc.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.glassfish</groupId>
+      <artifactId>javax.json</artifactId>
+      <version>1.0.4</version>
+    </dependency>
   </dependencies>
 
   <build>
